versioned_docs/version-21.10/installation/download.md
---
id: download
title: Download
---

Open Source software supplied by Centreon is generally available in 4 formats:

* [ISO Linux based on CentOS 7 distribution](https://download.centreon.com) (recommended),
* [RPM packages available for CentOS / Oracle Linux / RHEL distributions for 7 and 8 versions](https://download.centreon.com) (recommended),
* [Virtual machine based on CentOS 7 distribution](https://download.centreon.com) in OVA formats,
* [Archives containing the sources](https://download.centreon.com).

RPM packages and ISO linux are the best format to obtain our software. They are packaged by Centreon experts and relieve
you of any concern over the installation process.

> Centreon recommends using the [Centreon RPM packages](installation-of-a-central-server/using-packages.md) version.

If your platform does not support RPM packages, you should use archives containing the sources of stable versions of
our software and install them manually. Manual compilation of some packages can be complex.

For downloading Centreon, please refer to our [download website](https://download.centreon.com)
